@@ -1,9 +1,10 @@
 Package: Rfacebook
 Title: Access to Facebook API via R
 Description: Provides an interface to the Facebook API
-Version: 0.4
+Version: 0.5
 Date: 2014/04/02
-Author: Pablo Barbera <pablo.barbera@nyu.edu>
+Author: Pablo Barbera <pablo.barbera@nyu.edu>, Michael Piccirilli
+    <mrp2181@columbia.edu>
 Maintainer: Pablo Barbera <pablo.barbera@nyu.edu>
 Depends:
     R (>= 2.12.0),
