@@ -1,7 +1,10 @@
+# Generated by roxygen2 (4.1.0): do not edit by hand
+
 export(fbOAuth)
 export(getCheckins)
 export(getFQL)
 export(getFriends)
+export(getInsights)
 export(getLikes)
 export(getNetwork)
 export(getNewsfeed)
