@@ -1,13 +1,14 @@
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/Rfacebook-package.R
 \docType{package}
 \name{Rfacebook-package}
 \alias{Rfacebook}
 \alias{Rfacebook-package}
 \title{Access to Facebook API via R}
 \description{
-This package provides a series of functions that allow R
-users to access Facebook's API to get information about
-users and posts, and collect public status updates that
-mention specific keywords.
+This package provides a series of functions that allow R users
+to access Facebook's API to get information about users and posts,
+and collect public status updates that mention specific keywords.
 }
 \author{
 Pablo Barbera \email{pablo.barbera@nyu.edu}
