@@ -1,4 +1,5 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/fbOAuth.R
 \name{fbOAuth}
 \alias{fbOAuth}
 \title{Create OAuth token to Facebook R session}
