@@ -1,3 +1,5 @@
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/getFQL.R
 \name{getFQL}
 \alias{getFQL}
 \title{Executes a FQL query to the Facebook Graph API}
@@ -5,17 +7,16 @@
 getFQL(query, token)
 }
 \arguments{
-  \item{query}{Text of query}
+\item{query}{Text of query}
 
-  \item{token}{Either a temporary access token created at
-  \url{https://developers.facebook.com/tools/explorer} or
-  the OAuth token created with \code{fbOAuth}.}
+\item{token}{Either a temporary access token created at
+\url{https://developers.facebook.com/tools/explorer} or the OAuth token
+created with \code{fbOAuth}.}
 }
 \description{
-\code{getFQL} connects to Facebook's Graph API and executes
-a FQL query. See
-\url{https://developers.facebook.com/docs/technical-guides/fql/}
-for an overview of the Facebook Query Language.
+\code{getFQL} connects to Facebook's Graph API and executes a FQL query.
+See \url{https://developers.facebook.com/docs/technical-guides/fql/} for
+an overview of the Facebook Query Language.
 }
 \examples{
 \dontrun{
