@@ -1,4 +1,5 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/getFriends.R
 \name{getFriends}
 \alias{getFriends}
 \title{Extract list of friends with their information}
