@@ -1,3 +1,5 @@
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/getNewsfeed.R
 \name{getNewsfeed}
 \alias{getNewsfeed}
 \title{Download recent posts from the authenticated user's newsfeed}
@@ -5,15 +7,15 @@
 getNewsfeed(token, n = 200)
 }
 \arguments{
-  \item{token}{Either a temporary access token created at
-  \url{https://developers.facebook.com/tools/explorer} or
-  the OAuth token created with \code{fbOAuth}.}
+\item{token}{Either a temporary access token created at
+\url{https://developers.facebook.com/tools/explorer} or the OAuth token
+created with \code{fbOAuth}.}
 
-  \item{n}{Maximum number of posts to return.}
+\item{n}{Maximum number of posts to return.}
 }
 \description{
-\code{getNewsfeed} retrieves status updates from the
-authenticated user's News Feed
+\code{getNewsfeed} retrieves status updates from the authenticated user's
+News Feed
 }
 \examples{
 \dontrun{
