@@ -1,4 +1,5 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/getPage.R
 \name{getPage}
 \alias{getPage}
 \title{Extract list of posts from a public Facebook page}
