@@ -1,4 +1,5 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/getUsers.R
 \name{getUsers}
 \alias{getUsers}
 \title{Extract information about one or more Facebook users}
