@@ -1,3 +1,5 @@
+% Generated by roxygen2 (4.1.0): do not edit by hand
+% Please edit documentation in R/updateStatus.R
 \name{updateStatus}
 \alias{updateStatus}
 \title{Update Facebook status from R}
@@ -5,21 +7,18 @@
 updateStatus(text, token, link = NULL)
 }
 \arguments{
-  \item{text}{string, text of the status update}
+\item{text}{string, text of the status update}
 
-  \item{link}{string, URL of link to be added to status
-  update}
+\item{token}{Either a temporary access token created at
+\url{https://developers.facebook.com/tools/explorer} or the OAuth token
+created with \code{fbOAuth}. It needs to have extended permissions in order
+to successfully post to the Facebook profile.}
 
-  \item{token}{Either a temporary access token created at
-  \url{https://developers.facebook.com/tools/explorer} or
-  the OAuth token created with \code{fbOAuth}. It needs to
-  have extended permissions in order to successfully post
-  to the Facebook profile.}
+\item{link}{string, URL of link to be added to status update}
 }
 \description{
-\code{updateStatus} sends a status update that will be
-displayed on the Facebook profile of the authenticated
-user.
+\code{updateStatus} sends a status update that will be displayed
+on the Facebook profile of the authenticated user.
 }
 \examples{
 \dontrun{
@@ -29,8 +28,8 @@ user.
 }
 }
 \author{
-Pablo Barbera \email{pablo.barbera@nyu.edu}, Zakharov
-Kyrylo (\url{https://github.com/Amice13})
+Pablo Barbera \email{pablo.barbera@nyu.edu}, Zakharov Kyrylo
+(\url{https://github.com/Amice13})
 }
 \seealso{
 \code{\link{getUsers}}, \code{\link{getPost}}
