@@ -28,3 +28,7 @@
     - Now compatible with httr 0.3
 2014-04-02 - version 0.4.0:
     - Added function to execute FQL queries
+2014-12-26 - version 0.5.0:
+    - All functions now compatible with API v2.x
+    - GetPage now has date search options
+    - Fixed minor bugs in multiple functions (see github commits)
